Sun Jul 16 18:53:42 2000  Darrell Brunsch  <brunsch@uci.edu>

        * ace/TTY_IO:  Removed the #define for ACE_BUILD_DLL, since it 
          is already defined in the .dsp file.

Sun Jul 16 19:36:17 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

	* ace/QoS_Session.h:
	* ace/QoS_Session_Impl.{cpp,h,i}:
	* ace/SOCK_Dgram_Mcast_QoS.cpp: Changed these files to accomodate 
	  the new QoS decorator classes.

	* ace/QoS_Decorator.{cpp,h}: Added the QoS decoration for the
	  ACE_Event_Handler that enables it to catch the RAPI events along
	  with the usual socket events.

Sun Jul 16 08:49:44 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/OS: Added multiplication operators to ACE_Time_Value.  Thanks
	  to Tomer Amiaz <Tomer@bandwiz.com> for contributing these.

	* ace/Process_Manager: To fix deadlocks with the Process_Manager
	  on UNIX applied the following fixes:
  
          Use the notify() capability of the reactor from the signal
 	  handler. This allows the signal handler to notify the reactor
 	  (over a pipe) that the signal should be processed. This is done
 	  completely without MT locks.  If
 	  ACE_HAS_REACTOR_NOTIFICATION_QUEUE is defined,
 	  ACE_Select_Reactor_Notify::notify_queue_lock_ is now made a
 	  recursive mutex.

	  Thanks to Roger Larsson <larssoro@hotmail.com> for contribution
 	  these fixes.
	
	* ace/TTY_IO: Added additional support for the ACE serial line I/O 
	  wrapper facades.  Thanks to Martin Stack <mstack@cambertx.com>
 	  for contribution this.

	* ace/Service_Repository.h,
  	* ace/Service_Object.h,
  	* ace/Service_Config.h: Added the following aliases:
	
	  #define ACE_Component ACE_Service_Object
  	  #define ACE_Component_Config ACE_Service_Config
  	  #define ACE_Component_Repository ACE_Service_Repository
	  
	  to be consistent with the terminology in the POSA2 book.

Fri Jul 14 19:31:39 2000  Eric Ding  <qnd1@cs.wustl.edu>

        * ace/config-linux.h
        * ace/config-linux-lxpthreads.h